--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ cffi==1.9.1
 chardet==3.0.4
 Click==7.0
 colorama==0.3.9
+cryptography==1.7.2
 decorator==4.1.2
 docutils==0.14
 dominate==2.4.0
@@ -84,6 +85,7 @@ psycopg2==2.8.4
 psycopg2-binary==2.8.3
 py==1.8.0
 pyasn1==0.2.3
+PyAutoGUI==0.9.33
 pycodestyle==2.3.1
 pycparser==2.17
 pyflakes==1.6.0
@@ -92,6 +94,7 @@ Pygments==2.2.0
 PyJWT==1.4.2
 pylint==1.7.2
 pymongo==2.8
+PyMsgBox==1.0.4
 PyNaCl==1.3.0
 pyOpenSSL==16.2.0
 pyparsing==2.4.5
